--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <li class="remove">Laravel</li>
   </ol>
 <script>
-$('.remove').remove();
+$(function(){
+  $('.remove').remove();
+});
+
 </script>
 </body>
 </html>
